syntax = "proto3";

package orderpb;

option go_package = "shortLink/proto/orderpb";

// 订单服务接口定义
service OrderService {
  // 创建订单
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
  // 获取订单详情
  rpc GetOrderDetail(GetOrderDetailRequest) returns (GetOrderDetailResponse) {}
  // 取消订单
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse) {}
  // 更新订单支付状态
  rpc UpdateOrderPaymentStatus(UpdateOrderPaymentStatusRequest) returns (UpdateOrderPaymentStatusResponse) {}
}

// 创建订单请求
message CreateOrderRequest {
  string user_id = 1;         // 用户ID
  int64 total_amount = 2;     // 订单总金额（分）
  string currency = 3;        // 货币类型（CNY等）
  string description = 4;     // 订单描述
  string client_ip = 5;       // 客户端IP
  repeated OrderItem items = 6; // 订单项列表
  string delivery_info = 7;   // 配送信息（JSON）
}

// 订单项
message OrderItem {
  string product_id = 1;    // 商品ID
  string product_name = 2;  // 商品名称
  int32 quantity = 3;       // 数量
  int64 unit_price = 4;     // 单价（分）
  int64 total_price = 5;    // 总价（分）
  string attributes = 6;    // 商品属性（JSON）
}

// 创建订单响应
message CreateOrderResponse {
  string order_id = 1;      // 订单ID
  string status = 2;        // 订单状态
}

// 获取订单详情请求
message GetOrderDetailRequest {
  string order_id = 1;      // 订单ID
}

// 获取订单详情响应
message GetOrderDetailResponse {
  OrderDetail order = 1;    // 订单详情
  repeated OrderItemDetail items = 2; // 订单项列表
}

// 订单详情
message OrderDetail {
  string order_id = 1;      // 订单ID
  string user_id = 2;       // 用户ID
  int64 total_amount = 3;   // 订单总金额（分）
  string status = 4;        // 订单状态
  string payment_id = 5;    // 支付ID
  string created_time = 6;  // 创建时间
  string payment_time = 7;  // 支付时间
  string currency = 8;      // 货币类型
  string description = 9;   // 订单描述
  string client_ip = 10;    // 客户端IP
  string delivery_info = 11; // 配送信息
}

// 订单项详情
message OrderItemDetail {
  string product_id = 1;    // 商品ID
  string product_name = 2;  // 商品名称
  int32 quantity = 3;       // 数量
  int64 unit_price = 4;     // 单价（分）
  int64 total_price = 5;    // 总价（分）
  string attributes = 6;    // 商品属性（JSON）
}

// 取消订单请求
message CancelOrderRequest {
  string order_id = 1;      // 订单ID
  string reason = 2;        // 取消原因
}

// 取消订单响应
message CancelOrderResponse {
  bool success = 1;         // 是否成功
  string message = 2;       // 消息
}

// 更新订单支付状态请求
message UpdateOrderPaymentStatusRequest {
  string order_id = 1;      // 订单ID
  string payment_id = 2;    // 支付ID
  string status = 3;        // 订单状态
}

// 更新订单支付状态响应
message UpdateOrderPaymentStatusResponse {
  bool success = 1;         // 是否成功
  string message = 2;       // 消息
}